AUT-1536 Update java to version 17