@@ -24,7 +24,7 @@
     </licenses>
 
     <properties>
-        <maven.compiler.release>11</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
 
         <bouncycastle.version>1.78.1</bouncycastle.version>
         <elastic-apm.version>1.51.0</elastic-apm.version>
@@ -234,17 +234,6 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <!--
-                        Setting target value here is only needed to fix IntelliJ IDEA not detecting target version from
-                        global maven.compiler.release property. Maven compiler works correctly without it.
-                    -->
-                    <target>${maven.compiler.release}</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <executions>
                     <execution>
@@ -274,6 +263,66 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <environmentVariables>
+                        <ELASTIC_APM_ENABLED>false</ELASTIC_APM_ENABLED>
+                    </environmentVariables>
+                    <jvmArguments>
+                        -DIGNITE_NO_ASCII=true
+                        -DIGNITE_UPDATE_NOTIFIER=false
+                        <!--
+                          Make necessary JDK APIs available to Ignite according to
+                          https://ignite.apache.org/docs/2.15.0/setup#running-ignite-with-java-11-or-later
+                          "Java 17" configuration. Additionally, `java.net` and `java.time` are added to support
+                          TaraSession fields.
+                        -->
+                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.time=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        <!-- Ignite aggregates all network interface addresses to form work directory name. When machine
+                             has many IPv6 network interfaces, work directory name length may exceed file name length
+                             limit. Disable IPv6 usage to mitigate this. -->
+                        -Djava.net.preferIPv4Stack=true
+                    </jvmArguments>
+                    <image>
+                        <env>
+                            <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
+                            <BPE_APPEND_JAVA_TOOL_OPTIONS>
+                                -DIGNITE_NO_ASCII=true
+                                -DIGNITE_UPDATE_NOTIFIER=false
+                                <!--
+                                  Make necessary JDK APIs available to Ignite according to
+                                  https://ignite.apache.org/docs/2.15.0/setup#running-ignite-with-java-11-or-later
+                                  "Java 17" configuration. Additionally, `java.net` and `java.time` are added to support
+                                  TaraSession fields.
+                                -->
+                                --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                                --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                                --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.time=ALL-UNNAMED
+                                --add-opens=java.base/java.net=ALL-UNNAMED
+                            </BPE_APPEND_JAVA_TOOL_OPTIONS>
+                        </env>
+                    </image>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
@@ -295,6 +344,34 @@
                 <configuration>
                     <runOrder>random</runOrder>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <argLine>
+                        -DIGNITE_NO_ASCII=true
+                        -DIGNITE_UPDATE_NOTIFIER=false
+                        <!--
+                          Make necessary JDK APIs available to Ignite according to
+                          https://ignite.apache.org/docs/2.15.0/setup#running-ignite-with-java-11-or-later
+                          "Java 17" configuration. Additionally, `java.net` and `java.time` are added to support
+                          TaraSession fields.
+                        -->
+                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.time=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        <!-- Ignite aggregates all network interface addresses to form work directory name. When machine
+                             has many IPv6 network interfaces, work directory name length may exceed file name length
+                             limit. Disable IPv6 usage to mitigate this. -->
+                        -Djava.net.preferIPv4Stack=true
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
